weka-app-store-operator-chart/templates/cluster_init/routes/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-ui
  namespace: monitoring
spec:
  parentRefs:
    - name: warp-edge-gateway
      namespace: envoy-gateway-system
  hostnames:
    - grafana.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
